# cpp-homework

./: CMakeLists.txt
CMakeModules/: CodeCoverage.cmake
src/: CMakeLists.txt  figures.cpp  figures.h  main.cpp  misc.cpp  misc.h  test.cpp
